<resources>
    <string name="app_name">ArticleSearch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search">News Article Search</string>
    <string name="search_button_label">SEARCH</string>
    <string name="search_hint_text">Search…</string>
    <string name="search_image_description">Article Image</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="begin_date_text">Begin Date</string>
    <string name="sort_label">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>


    <string name="arts_news_desk_checkbox">Arts</string>
    <string name="fashion_news_desk_checkbox">Fashion &amp; Style</string>
    <string name="sports_news_desk_checkbox">Sports</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="sort_order_prompt">Sort</string>
    <string name="toolbar_title">Search</string>
    <string name="toolbar_search_item">Search</string>
    <string-array name="sort_order_options">
        <item>oldest</item>
        <item>newest</item>
    </string-array>
</resources>
