<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/filter_settings_dialog_size"
    android:layout_height="@dimen/filter_settings_dialog_size"
    android:orientation="vertical"
    android:minWidth="@dimen/filter_settings_dialog_size"
    android:minHeight="@dimen/filter_settings_dialog_size"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/begin_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_date_text"
        android:textSize="@dimen/settings_dialog_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:paddingTop="@dimen/search_image_padding" />

    <LinearLayout
        android:id="@+id/date_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/begin_date_input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/settings_dialog_text_size"
            android:textStyle="bold"
            android:layout_weight="1"
            android:fontFamily="sans-serif" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_date_button"
            android:background="@null"
            android:src="@mipmap/ic_pick_date" />

    </LinearLayout>

    <TextView
        android:id="@+id/sort_order_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_label"
        android:textSize="@dimen/settings_dialog_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:paddingTop="@dimen/search_image_padding" />

    <Spinner
        android:id="@+id/sort_order_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/sort_order_prompt"
        android:textSize="@dimen/settings_dialog_text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/news_desk_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_values"
        android:textSize="@dimen/settings_dialog_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:paddingTop="@dimen/search_image_padding" />

    <CheckBox
        android:id="@+id/arts_news_desk_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/settings_dialog_item_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:fontFamily="sans-serif"
        android:layout_gravity="center_vertical"
        android:textAlignment="center"
        android:text="@string/arts_news_desk_checkbox"
        android:paddingTop="@dimen/search_image_padding"/>
    <CheckBox
        android:id="@+id/fashion_news_desk_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/settings_dialog_item_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:text="@string/fashion_news_desk_checkbox"
        android:paddingTop="@dimen/search_image_padding"/>
    <CheckBox
        android:id="@+id/sports_news_desk_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/settings_dialog_item_text_size"
        android:textStyle="bold"
        android:textColor="@color/settingsLabelColor"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:text="@string/sports_news_desk_checkbox"
        android:paddingTop="@dimen/search_image_padding"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_padding"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/settings_dialog_item_text_size" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/save_button_text"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textSize="@dimen/settings_dialog_item_text_size"
            style="?attr/buttonBarButtonStyle"
            android:padding="@dimen/button_padding"/>
    </RelativeLayout>

</LinearLayout>
